--- a/app.json
+++ b/app.json
@@ -1,41 +1,34 @@
 {
   "expo": {
-    "name": "VeriHealApp",
-    "slug": "VeriHealApp",   
-    "owner": "muffinlearns",       
+    "name": "VeriHeal",
+    "slug": "veriheal-app",
     "version": "1.0.0",
+    "sdkVersion": "53.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "scheme": "veriheal",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.veriheal.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.veriheal.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "8cd5e84e-10f9-4d2d-b720-5bb274831f41"
-      }
-    },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
-    "updates": {
-      "url": "https://u.expo.dev/8cd5e84e-10f9-4d2d-b720-5bb274831f41"
-    }
+    "plugins": []
   }
 }
