--- a/package.json
+++ b/package.json
@@ -1,31 +1,54 @@
 {
   "name": "verihealapp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.24",
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.3.0",
-    "expo-image-picker": "~16.1.4",
-    "expo-updates": "~0.28.17"
+    "@burnt-labs/abstraxion": "^1.0.0-alpha.66",
+    "@burnt-labs/abstraxion-react-native": "^1.0.0-alpha.7",
+    "@cosmjs/cosmwasm-stargate": "^0.33.1",
+    "@craftzdog/react-native-buffer": "^6.1.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@noble/hashes": "^1.3.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reclaimprotocol/inapp-rn-sdk": "^0.12.0",
+    "@reclaimprotocol/js-sdk": "^4.4.0",
+    "expo": "^54.0.7",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.2.2",
+    "expo-router": "^3.4.7",
+    "expo-splash-screen": "^0.27.7",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "^0.25.28",
+    "expo-web-browser": "~13.0.3",
+    "fs-extra": "^11.3.1",
+    "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.76.5",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
+    "react-native-toast-message": "^2.3.3",
+    "readable-stream": "^4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.55",
+    "@types/react-native": "^0.73.0",
+    "typescript": "~5.3.3"
+  },
+  "resolutions": {
+    "@noble/hashes": "^1.3.2"
   },
   "private": true
 }
