--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,42 +1,25 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-  repositories {
-    google()
-    
-    mavenCentral()
-    maven { url "https://reclaim-inapp-sdk.s3.ap-south-1.amazonaws.com/android/repo" }
-    maven { url "https://storage.googleapis.com/download.flutter.io" }
-  }
-  dependencies {
-    classpath('com.android.tools.build:gradle')
-    classpath('com.facebook.react:react-native-gradle-plugin')
-    classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
-  }
-}
-
-def reactNativeAndroidDir = new File(
-  providers.exec {
-    workingDir(rootDir)
-    commandLine("node", "--print", "require.resolve('react-native/package.json')")
-  }.standardOutput.asText.get().trim(),
-  "../android"
-)
-
-allprojects {
-  repositories {
-    maven {
-      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-      url(reactNativeAndroidDir)
+    ext {
+        kotlinVersion = '2.2.20' // Expo-compatible
     }
 
-    google()
-    
-    mavenCentral()
-    maven { url "https://reclaim-inapp-sdk.s3.ap-south-1.amazonaws.com/android/repo" }
-    maven { url "https://storage.googleapis.com/download.flutter.io" }
-    maven { url 'https://www.jitpack.io' }
-  }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath("com.android.tools.build:gradle:8.1.0")
+        classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://www.jitpack.io' }
+    }
 }
 
 apply plugin: "expo-root-project"
