--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.31.1",
     "react-native-toast-message": "^2.3.3",
+    "react-native-web": "^0.20.0",
     "readable-stream": "^4.7.0"
   },
   "devDependencies": {
